// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventCounterParty receive matches snapshot 1`] = `
<div
  className="css-text-901oao css-textOneLine-bfa6kz"
  dir="auto"
  style={
    Object {
      "color": "rgba(85,85,85,1.00)",
      "direction": "ltr",
      "fontFamily": "Roboto",
      "fontSize": "16px",
      "fontWeight": "normal",
      "lineHeight": "22px",
      "textAlign": "center",
      "textDecoration": "none",
      "textTransform": "capitalize",
    }
  }
>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "color": "rgba(0,0,0,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "8px",
        "fontWeight": "500",
        "lineHeight": "22px",
        "textAlign": "center",
        "textDecoration": "none",
        "textTransform": "none",
      }
    }
  >
    From
    :
  </span>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "color": "rgba(0,0,0,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto-Medium",
        "fontSize": "16px",
        "fontWeight": "normal",
        "lineHeight": "22px",
        "textAlign": "center",
        "textDecoration": "none",
        "textTransform": "none",
      }
    }
  >
     Misao Matimbo
  </span>
</div>
`;

exports[`EventCounterParty send matches snapshot 1`] = `
<div
  className="css-text-901oao css-textOneLine-bfa6kz"
  dir="auto"
  style={
    Object {
      "color": "rgba(85,85,85,1.00)",
      "direction": "ltr",
      "fontFamily": "Roboto",
      "fontSize": "16px",
      "fontWeight": "normal",
      "lineHeight": "22px",
      "textAlign": "center",
      "textDecoration": "none",
      "textTransform": "capitalize",
    }
  }
>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "color": "rgba(0,0,0,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "8px",
        "fontWeight": "500",
        "lineHeight": "22px",
        "textAlign": "center",
        "textDecoration": "none",
        "textTransform": "none",
      }
    }
  >
    To
    :
  </span>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "color": "rgba(0,0,0,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto-Medium",
        "fontSize": "16px",
        "fontWeight": "normal",
        "lineHeight": "22px",
        "textAlign": "center",
        "textDecoration": "none",
        "textTransform": "none",
      }
    }
  >
     Misao Matimbo
  </span>
</div>
`;

exports[`EventCounterParty withdraw matches snapshot 1`] = `
<div
  className="css-text-901oao css-textOneLine-bfa6kz"
  dir="auto"
  style={
    Object {
      "color": "rgba(85,85,85,1.00)",
      "direction": "ltr",
      "fontFamily": "Roboto",
      "fontSize": "16px",
      "fontWeight": "normal",
      "lineHeight": "22px",
      "textAlign": "center",
      "textDecoration": "none",
      "textTransform": "capitalize",
    }
  }
>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "color": "rgba(0,0,0,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "8px",
        "fontWeight": "500",
        "lineHeight": "22px",
        "textAlign": "center",
        "textDecoration": "none",
        "textTransform": "none",
      }
    }
  >
    From
    :
  </span>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "color": "rgba(0,0,0,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto-Medium",
        "fontSize": "16px",
        "fontWeight": "normal",
        "lineHeight": "22px",
        "textAlign": "center",
        "textDecoration": "none",
        "textTransform": "none",
      }
    }
  >
     Misao Matimbo
  </span>
</div>
`;
